--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
+    "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.analytics": "3.6.12",
     "com.unity.animation.rigging": "1.1.1",
+    "com.unity.burst": "1.6.5",
     "com.unity.cinemachine": "2.8.6",
     "com.unity.collab-proxy": "1.15.17",
     "com.unity.feature.2d": "1.0.0",
@@ -9,6 +13,7 @@
     "com.unity.ide.visualstudio": "2.0.15",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.3.0",
+    "com.unity.postprocessing": "3.2.2",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.4",
